[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.11.4", features = ["json"] }
parse-display = "0.5.0"
futures = "0.3.15"
redis = { version = "0.20.2", features = ["aio", "connection-manager", "tokio-comp"] }
serde_json = "1.0.64"
thiserror = "1.0.26"